--- a/FUNDACOMPROG PROJ/My Project/Resources.resx
+++ b/FUNDACOMPROG PROJ/My Project/Resources.resx
@@ -163,19 +163,28 @@
   <data name="loadlog (1)" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\loadlog (1).png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
-  <data name="download" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\download.jfif;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  <data name="loadlog (11)" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\loadlog (11).png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
-  <data name="loadlog (8)1" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\loadlog (8)1.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  <data name="loadlog (9)" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\loadlog (9).png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
   <data name="really great site (1)" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\really great site (1).png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="loadlog (8)1" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\loadlog (8)1.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="loadlog (10)" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\loadlog (10).png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
   <data name="loadlog (6)" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\loadlog (6).png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
-  <data name="loadlog (9)" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\loadlog (9).png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  <data name="download" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\download.jfif;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="loadlog (12)" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\loadlog (12).png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
 </root>
